Add ironic common package for debain platform family
Add irconic-common to the ubuntu common package list
in default attributes.

By the way, correct connection url that is messed up .

Change-Id: I658670681d4a2f7f7ad5f584b9c1c24448da7384
Closes-bug: #1428926
Closes-bug: #1429245

--- a/templates/default/ironic.conf.erb
+++ b/templates/default/ironic.conf.erb
@@ -652,7 +652,7 @@ log_dir=<%= node['openstack']['bare-metal']['log_dir'] %>
 # Deprecated group/name - [DEFAULT]/sql_connection
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
-connection==<%= @db_connection %>
+connection=<%= @db_connection %>
 
 # The SQLAlchemy connection string to use to connect to the
 # slave database. (string value)
