Correct the wrong configuration about glance_protocol
Change-Id: If736210aaac0436119ac6c4ea880d056f086090c
Closes-bug: #1444892

--- a/templates/default/ironic.conf.erb
+++ b/templates/default/ironic.conf.erb
@@ -857,7 +857,7 @@ glance_port=<%= @glance_port %>
 
 # Default protocol to use when connecting to glance. Set to
 # https for SSL. (string value)
-glance_protocol=<%= @glance_scheme %>
+glance_protocol=<%= @glance_protocol %>
 
 # A list of the glance api servers available to ironic. Prefix
 # with https:// for SSL-based glance API servers. Format is
