Add neutron url attribute for ironic
Change-Id: I46f5de1bcff5735f37e75deca931f59aa3ff0c81
Closes-bug: #1450323

--- a/templates/default/ironic.conf.erb
+++ b/templates/default/ironic.conf.erb
@@ -1118,7 +1118,7 @@ signing_dir=<%= node['openstack']['bare-metal']['api']['auth']['cache_dir'] %>
 #
 
 # URL for connecting to neutron. (string value)
-#url=http://$my_ip:9696
+url=<%= @network_endpoint %>
 
 # Timeout value for connecting to neutron in seconds. (integer
 # value)
