Add rabbitmq max_retries and retry_interval in ironic conf
Oslo.message using rabbit_max_retries and rabbit_retry_interval to
define reconnect rabbitmq server times and interval when can not
connect to rabbitmq server.

Change-Id: I43c682784d5721a09546937b9e587d9e67478883
Partial-Bug: #1439968

--- a/templates/default/ironic.conf.erb
+++ b/templates/default/ironic.conf.erb
@@ -1187,7 +1187,7 @@ rabbit_use_ssl=<%= node['openstack']['mq']['bare-metal']['rabbit']['use_ssl'] %>
 
 # How frequently to retry connecting with RabbitMQ. (integer
 # value)
-#rabbit_retry_interval=1
+rabbit_retry_interval=<%= node['openstack']['mq']['bare-metal']['rabbit']['rabbit_retry_interval'] %>
 
 # How long to backoff for between retries when connecting to
 # RabbitMQ. (integer value)
@@ -1195,7 +1195,7 @@ rabbit_use_ssl=<%= node['openstack']['mq']['bare-metal']['rabbit']['use_ssl'] %>
 
 # Maximum number of RabbitMQ connection retries. Default is 0
 # (infinite retry count). (integer value)
-#rabbit_max_retries=0
+rabbit_max_retries=<%= node['openstack']['mq']['bare-metal']['rabbit']['rabbit_max_retries'] %>
 <% end -%>
 
 
