--- a/templates/default/ironic.conf.erb
+++ b/templates/default/ironic.conf.erb
@@ -2,20 +2,6 @@
 
 [DEFAULT]
 
-# SSL key file (valid only if SSL enabled). (string value)
-#kombu_ssl_keyfile=
-
-# SSL cert file (valid only if SSL enabled). (string value)
-#kombu_ssl_certfile=
-
-# SSL certification authority file (valid only if SSL
-# enabled). (string value)
-#kombu_ssl_ca_certs=
-
-# How long to wait before reconnecting in response to an AMQP
-# consumer cancel notification. (floating point value)
-#kombu_reconnect_delay=1.0
-
 # Deprecated, use rpc_backend=kombu+memory or rpc_backend=fake
 # (boolean value)
 #fake_rabbit=false
@@ -1142,11 +1128,34 @@ amqp_auto_delete=<%= node['openstack']['mq']['bare-metal']['auto_delete'] %>
 # Size of RPC connection pool. (integer value)
 rpc_conn_pool_size=<%= node['openstack']['bare-metal']['rpc_conn_pool_size'] %>
 
-<% if node['openstack']['mq']['bare-metal']['rabbit']['use_ssl'] && node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_version'] %>
+<% if node['openstack']['mq']['bare-metal']['rabbit']['use_ssl'] -%>
+
+# Connect over SSL for RabbitMQ. (boolean value)
+rabbit_use_ssl=true
+
+<%   if node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_version'] -%>
 # SSL version to use (valid only if SSL enabled). valid values
 # are TLSv1 and SSLv23. SSLv2 and SSLv3 may be available on
 # some distributions. (string value)
 kombu_ssl_version=<%= node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_version'] %>
+<%   end -%>
+<%   if node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_keyfile'] -%>
+# SSL key file (valid only if SSL enabled)
+kombu_ssl_keyfile=<%= node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_keyfile'] %>
+<%   end -%>
+<%   if node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_certfile'] -%>
+# SSL cert file (valid only if SSL enabled)
+kombu_ssl_certfile=<%= node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_certfile'] %>
+<%   end -%>
+<%   if node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_ca_certs'] -%>
+# SSL certification authority file (valid only if SSL enabled)
+kombu_ssl_ca_certs=<%= node['openstack']['mq']['bare-metal']['rabbit']['kombu_ssl_ca_certs'] %>
+<%   end -%>
+# How long to wait before reconnecting in response to an AMQP consumer cancel notification
+kombu_reconnect_delay=<%= node['openstack']['mq']['bare-metal']['rabbit']['kombu_reconnect_delay'] %>
+# How long to wait before considering a reconnect attempt to have failed.
+# This value should not be longer than rpc_response_timeout
+kombu_reconnect_timeout=<%= node['openstack']['mq']['bare-metal']['rabbit']['kombu_reconnect_timeout'] %>
 <% end -%>
 
 ##### RABBITMQ #####
@@ -1167,7 +1176,6 @@ rabbit_hosts=<%= @rabbit_hosts %>
 # value)
 rabbit_ha_queues=True
 
-rabbit_use_ssl=<%= node['openstack']['mq']['bare-metal']['rabbit']['use_ssl'] %>
 <% else -%>
 # The RabbitMQ broker address where a single node is used.
 # (string value)
@@ -1176,14 +1184,10 @@ rabbit_host=<%= node['openstack']['mq']['bare-metal']['rabbit']['host'] %>
 # The RabbitMQ broker port where a single node is used.
 # (integer value)
 rabbit_port=<%= node['openstack']['mq']['bare-metal']['rabbit']['port'] %>
-
-# Connect over SSL for RabbitMQ. (boolean value)
-rabbit_use_ssl=<%= node['openstack']['mq']['bare-metal']['rabbit']['use_ssl'] %>
 <% end -%>
 
 # The RabbitMQ login method. (string value)
 #rabbit_login_method=AMQPLAIN
-
 
 # How frequently to retry connecting with RabbitMQ. (integer
 # value)
@@ -1197,7 +1201,6 @@ rabbit_retry_interval=<%= node['openstack']['mq']['bare-metal']['rabbit']['rabbi
 # (infinite retry count). (integer value)
 rabbit_max_retries=<%= node['openstack']['mq']['bare-metal']['rabbit']['rabbit_max_retries'] %>
 <% end -%>
-
 
 [pxe]
 
