Convert hyphens to underscores for service names
The Chef Style Guide[1] does not recommend using hyphens for
cookbook or resource names. To maintain consistency, we should follow
best practices.

[1]: https://docs.chef.io/ruby.html#use-of-hyphens

Depends-On: Ic2b6d8f1cdf719791faaebdbd7e29e789eb3f31c
Change-Id: Ib8b6ed53f2d4e97ea5bfc89f5fb8fac42308b3b7

--- a/templates/default/ironic.conf.erb
+++ b/templates/default/ironic.conf.erb
@@ -1,4 +1,4 @@
-<%= node['openstack']['baremetal']['custom_template_banner'] %>
+<%= node['openstack']['bare_metal']['custom_template_banner'] %>
 <% @service_config.each do |section, values| -%>
 [<%= section %>]
   <% values.each do |key, value| -%>
