--- a/templates/default/wsgi-template.conf.erb
+++ b/templates/default/wsgi-template.conf.erb
@@ -1,4 +1,4 @@
-<%= node['openstack']['baremetal']['custom_template_banner'] %>
+<%= node['openstack']['bare_metal']['custom_template_banner'] %>
 
 Listen <%= @params[:server_host] %>:<%= @params[:server_port] %>
 
